# DuperGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.c
src/gfx/: buffer.c  buffer.h  camera.c  camera.h  gui.c  gui.h  shader.c  shader.h  textures.c  textures.h
